crates/stc_ts_file_analyzer/tests/errors/issues/0xxx/415/4.ts
// @strict: true 

interface A {
    a: string;
}
interface B {
    b: string;
}
interface C {
    c: string;
}
interface D {
    d: string;
}

var aob: A | B;
var x: (A & B) | (C & D);

aob = x;

export { }